<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="129dp"
        android:layout_height="112dp"
        android:layout_marginStart="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121"
        app:srcCompat="@drawable/app_icon" />

    <Button
        android:id="@+id/buttonAuth"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="476dp"
        android:background="@drawable/button_primary"
        android:text="@string/aceptar"
        android:textColor="#0c0d0e"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblResendVerificationCode"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="68dp"
        android:layout_marginTop="332dp"
        android:gravity="center_horizontal"
        android:text="@string/lblResendVerificationCode"
        android:textColor="#0c0d0e"
        android:textSize="15sp"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtAuth"
        android:layout_width="354dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="272dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:hint="@string/ingresar_c_digo"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:paddingStart="20dp"
        android:textColorHint="#0c0d0e"
        android:textSize="14sp"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lblResendVerificationCode2"
        android:layout_width="338dp"
        android:layout_height="21dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="244dp"
        android:gravity="center_horizontal"
        android:text="@string/lblEnvioMail"
        android:textColor="#0c0d0e"
        android:textSize="12dp"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/buttonReenviar"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="68dp"
        android:layout_marginTop="416dp"
        android:background="@drawable/button_secondary"
        android:text="@string/reenviar"
        android:textColor="#0c0d0e"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>


